--- a/css/default.css
+++ b/css/default.css
@@ -1,38 +1,62 @@
 body {
-
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 1em;
+  background-color: rgb(241, 244, 249);
 }
-
 div#page {
   width: 768px;
-  margin:0 auto;
+  margin: 0 auto;
 }
-
 div#mainMenu {
-  width:100%;
-  height:20px;
+  width: 100%;
+  height: 20px;
   background-color: #362f7f;
   color: white
 }
-
+.grid {
+  width: 100%;
+  max-width: 1200px;
+}
+.row:before, .row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+[class*='col-'] {
+  float: left;
+  min-height: 1px;
+  width: 50%;
+}
+.col-1 {
+  width: 16.66%;
+}
+.col-2 {
+  width: 33.33%;
+}
+.button {
+  width: auto;
+  height: 75px;
+  border-radius: 25px;
+  padding: 20px;
+  border-style: solid;
+  border-color: #004c78;
+  margin-left: auto;
+  margin-right: auto;
+}
 ul#mainLinks li {
-float: left;
-width: 23%;
-padding-bottom: 5px;
-text-align: center;
+  float: left;
+  width: 23%;
+  padding-bottom: 5px;
+  text-align: center;
 }
-
 .container {
-
+  background-color: white;
 }
-
 div#main {
-  float:left;
-  width:70%
+  float: left;
+  width: 70%
 }
-
 div#receipt {
-  float:right;
-  width: 30%
-  }
+  float: right;
+  width: 25%
+}
