--- a/css/default.css
+++ b/css/default.css
@@ -28,13 +28,15 @@ div#mainMenu {
 }
 .col-1 {
   width: 45%;
-  margin-left:1em;
+  margin-left:5px;
   float: left;
   min-height: 1px;
   border-style: solid;
   border-color: #004c78;
   border-radius: 25px;
-  margin-bottom:1em
+  margin-bottom:1em;
+  text-align: center;
+  padding: 5px 0 5px 0
 }
 
 
