--- a/css/default.css
+++ b/css/default.css
@@ -13,11 +13,9 @@ div#mainMenu {
   background-color: #362f7f;
   color: white
 }
-
 a {
-  color:white
+  color: white
 }
-
 .grid-container {
   width: 100%;
   max-width: 1200px;
@@ -29,31 +27,26 @@ a {
   clear: both;
 }
 .row {
-  margin-bottom:2em;
+  margin-bottom: 2em;
 }
-
-
 .col-1 {
   width: 45%;
-  margin-left:5px;
+  margin-left: 5px;
   float: left;
   min-height: 1px;
   border-style: solid;
   border-color: #004c78;
   border-radius: 25px;
-  margin-bottom:1em;
+  margin-bottom: 1em;
   text-align: center;
   padding: 5px 0 5px 0
 }
-
-
 .col-5 {
   width: 45%;
   margin-left: 5px;
   float: left;
   padding: 5px 0 5px 0
 }
-
 .col-6 {
   width: 45%;
   margin-left: 5px;
@@ -61,9 +54,6 @@ a {
   text-align: center;
   padding: 5px 0 5px 0
 }
-
-
-
 .button {
   width: auto;
   height: 75px;
@@ -91,9 +81,9 @@ div#receipt {
   float: right;
   width: 25%
 }
-
-.center{
+.center {
+  text-align: center;
+  display: block;
   margin-left: auto;
-  margin-right: auto;
-  width: 20em
+  margin-right: auto
 }
