--- a/css/default.css
+++ b/css/default.css
@@ -4,7 +4,7 @@ body {
   background-color: rgb(241, 244, 249);
 }
 div#page {
-  width: 768px;
+  width: 80%;
   margin: 0 auto;
 }
 div#mainMenu {
@@ -13,6 +13,17 @@ div#mainMenu {
   background-color: #362f7f;
   color: white
 }
+
+div#header {
+
+}
+
+div#header img {
+  width: 100%;
+  height: 30%;
+  margin: auto
+}
+
 a {
   color: white
 }
@@ -75,11 +86,11 @@ ul#mainLinks li {
 }
 div#main {
   float: left;
-  width: 75%
+  width: 70%
 }
 div#receipt {
   float: right;
-  width: 25%
+  width: 30%
 }
 .center {
   text-align: center;
