--- a/css/default.css
+++ b/css/default.css
@@ -4,7 +4,7 @@ body {
   background-color: rgb(241, 244, 249);
 }
 div#page {
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
 }
 div#mainMenu {
@@ -14,14 +14,26 @@ div#mainMenu {
   color: white
 }
 
-div#header {
+div#companyLogo {
+  float:left;
+  width: 60%;
+}
 
+#callToAction img {
+  width: 40%
+}
+
+#callToAction {
+  height: 25%;
+}
+
+div#header {
+  margin-bottom: 1em;
+  min-height: 25%;
 }
 
 div#header img {
-  width: 100%;
-  height: 30%;
-  margin: auto
+  height: 25%;
 }
 
 a {
